--- a/cloud-vue/pom.xml
+++ b/cloud-vue/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.smart4y</groupId>
   <artifactId>cloud-vue</artifactId>
-  <version>0.8.0-SNAPSHOT</version>
+  <version>0.8.0</version>
   <packaging>pom</packaging>
   <!--  <name>cloud-vue</name>-->
   <name>#7 前端页面模块</name>
