--- a/cloud-dependencies/pom.xml
+++ b/cloud-dependencies/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.smart4y</groupId>
     <artifactId>cloud-dependencies</artifactId>
-    <version>0.8.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <!--    <name>cloud-dependencies</name>-->
     <name>#1 模块依赖管理</name>
