--- a/cloud-spider/pom.xml
+++ b/cloud-spider/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>cloud-spider</artifactId>
-    <version>0.8.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <!--    <name>cloud-spider</name>-->
     <name>#6 平台网关服务</name>
@@ -18,7 +18,7 @@
     <parent>
         <groupId>com.smart4y</groupId>
         <artifactId>cloud</artifactId>
-        <version>0.8.0</version>
+        <version>0.9.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
