--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.smart4y</groupId>
     <artifactId>cloud</artifactId>
-    <version>0.8.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <!--    <name>cloud</name>-->
     <name>#0 微服务的平台</name>
@@ -115,6 +115,8 @@
                         <buildArgs>
                             <!-- 提供参数向Dockerfile传递 -->
                             <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
+                            <!-- 提供参数向Dockerfile传递 -->
+                            <IP_DB_FILE>src/main/resources/ip/ip2region.db</IP_DB_FILE>
                         </buildArgs>
                     </configuration>
                     <executions>
