--- a/cloud-dependencies/pom.xml
+++ b/cloud-dependencies/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.smart4y</groupId>
     <artifactId>cloud-dependencies</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>#1 模块依赖管理</name>
     <description>依赖管理</description>
