--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,21 +36,6 @@ services:
       - "${DOCKER_VOL_DIR}/mysql/logs:/logs"
     labels:
       NAME: "mysql"
-  redis:
-    image: redis:3.2
-    container_name: redis
-    networks:
-      - infra
-    ports:
-      - "6379:6379"
-    volumes:
-      - "${DOCKER_VOL_DIR}/redis/conf:/usr/local/etc/redis"
-      - "${DOCKER_VOL_DIR}/redis/data:/data"
-    command: redis-server --requirepass 123456
-    environment:
-      - TZ=Asia/Shanghai
-    labels:
-      NAME: "redis"
   rabbitmq:
     image: "rabbitmq:3.7-management"
     container_name: rabbitmq
@@ -72,6 +57,21 @@ services:
       - "${DOCKER_VOL_DIR}/rabbitmq/lib:/var/rabbitmq/lib"
     labels:
       NAME: "rabbitmq"
+  redis:
+    image: redis:3.2
+    container_name: redis
+    networks:
+      - infra
+    ports:
+      - "6379:6379"
+    volumes:
+      - "${DOCKER_VOL_DIR}/redis/conf:/usr/local/etc/redis"
+      - "${DOCKER_VOL_DIR}/redis/data:/data"
+    command: redis-server --requirepass 123456
+    environment:
+      - TZ=Asia/Shanghai
+    labels:
+      NAME: "redis"
   hippo:
     image: cloud/cloud-hippo:1.1.0-SNAPSHOT
     container_name: hippo
@@ -95,6 +95,7 @@ services:
       - mysql
       - redis
       - rabbitmq
+    entrypoint: "/wait-for-it.sh localhost:8848/nacos/actuator/health -- java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
   owl:
     image: cloud/cloud-owl:1.1.0-SNAPSHOT
     container_name: owl
@@ -115,6 +116,7 @@ services:
       - "${DOCKER_VOL_DIR}/cloud-owl/logs:/logs/cloud-owl"
     depends_on:
       - hippo
+    entrypoint: "/wait-for-it.sh localhost:8223/actuator/health -- java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
   spider:
     image: cloud/cloud-spider:1.1.0-SNAPSHOT
     container_name: spider
@@ -135,6 +137,7 @@ services:
       - "${DOCKER_VOL_DIR}/cloud-spider/logs:/logs/cloud-spider"
     depends_on:
       - owl
+    entrypoint: "/wait-for-it.sh localhost:7211/actuator/health -- java -Djava.security.egd=file:/dev/./urandom -jar /app.jar"
 
 networks:
   #基础设施层网络
